$Id: changelog,v 1.128 2016/08/31 08:43:23 alfred Exp $
------------------------------------------------------------------------------

2016-09-11 [1.42 Bld 112]

- Addition    : add support for Toshiba TC9331

- Addition    : add support for TI TMS 320C4x

- Addition    : add include file with Hitachi/Renesas 6303 registers

2016-08-21 [1.42 Bld 111]

- Bugfix      : correct a couple of bugs detected by CLang

- Addition    : add support for NEC 78K3

2016-07-01 [1.42 Bld 110]

- Addition    : allow enforcement of prefixes for TLCS-9000

2016-06-26 [1.42 Bld 109]

- Bugfix      : Correct output file in respect to expanded structures

2016-04-26 [1.42 Bld 108]

- Bugfix      : For 8080/8085, complain about wrong register names
                for PUSH/POP

- Addition    : Allow automatic 16/32-bit deduction for inner
                displacement on 68K

- Addition    : Allow Intel-style hex syntax for addresses passed
                to P2BIN and P2HEX

2016-02-07 [1.42 Bld 107]

- Addition    : Allow register symbols on MCS-48/(2)51

2015-10-28 [1.42 Bld 106]

- Addition    : Allow sub-structures of same name in different structures

2015-10-23 [1.42 Bld 105]

- Bugfix      : Correct Handling of nested structures and unions
- Addition    : Allow unnamed structures and unions
- Bugfix      : Correct some SFR definitions for DS80C320
- Addition    : Allow ? as argument to BYT/FCB/ADR/FDB to reserve space

2015-10-17 [1.42 Bld 104]

- Bugfix      : Correct SHARED symbol output in C mode

- Bugfix      : Correct coding of CC on 6809 for push/pull

2015-09-26 [1.42 Bld 103]

- Bugfix      : On 8008, the assembler accidentally allowed
                INR, DCR and MOV with invalid register operands.

2015-08-30 [1.42 Bld 102]

- Bugfix      : yet another fix to correct handling of BSR
                on 68K

2015-08-19 [1.42 Bld 101]

- Bugfix      : correct PC-relative addressing on 807x target

- Bugfix      : add missing condition codes of 68K FPU
