@@ -22,6 +22,7 @@ typedef Integ16 Integer;
 
 typedef Card32 LongWord;
 typedef Integ32 LongInt;
+#define PRILongInt PRIInteg32
 
 #ifdef HAS64
 typedef Card64 QuadWord;
