@@ -14,6 +14,7 @@ for t in $SUBDIRS; do
  if cd $t ; then
  {
   cat $t.doc
+  # valgrind --leak-check=yes  ...
   ../../asl `cat asflags` -i ../../include $t.asm | tee $t.log
   ../../p2bin -k -l 0 -r 0x-0x $t
   echo +---------------------------------------------------------------+
